# speechcommands-app

./: .gitignore  CMakeLists.txt  README.md  arm-pico-toolchain.cmake  build.sh  main.cpp  model.ipynb  requirements.txt  tiny_kws2.pt  tiny_kws2.pte  tiny_kws2nq.pte
include/: audio_transform.h  audio_transform.h.old  constants.h  model_pte.h  test_input_0.h  words.h
src/: audio_transform.cpp  main.cpp
tests/: .gitignore  build_testbase.py  local_measure.py  pico_measure.py  simple_test.py
